# DNM-hunter

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile.scanner  README.md  SECURITY.md  SETUP.md  THIRD-PARTY-LICENSES.md  docker-compose.dev.yml  docker-compose.yml  nisarghunter.sh  pyproject.toml  starthunt  starthunt.cmd  starthunt.ps1
agentic/: Dockerfile  api.py  docker-compose.yml  logging_config.py  orchestrator.py  project_settings.py  requirements-kb.txt  requirements.txt  run_tests.sh  state.py  tools.py  utils.py  websocket_api.py
ai_attack_surface_scan/: Dockerfile  __init__.py  graph.py  project_settings.py  safety.py
baddns_scan/: Dockerfile  entrypoint.sh
benchmark/: README.md  ground_truth.yaml  score.py
binary_audit/: README.md  __init__.py  elf.py
cloud_recon/: Dockerfile  main.py  permutations.py  project_settings.py  runner.py
code_audit/: README.md  __init__.py  scanner.py
codefix_sandbox/: Dockerfile
common/: __init__.py  job_lifecycle.py  job_manager.py  module_contract.py  module_registry.py  recon_planner.py
contract_audit/: README.md  __init__.py  scanner.py
deep_binary/: README.md  __init__.py  __main__.py  requirements.txt  symbolic.py
docker_broker/: Dockerfile  broker.py  test_broker.sh  test_plumbing.py  test_policy.py
docs/: MODULE_DEVELOPMENT.md  README.md  SECURITY_MODULES.md
github_secret_hunt/: Dockerfile  github_secret_hunt.py  main.py
graph_db/: ai_provider_map.py  docker-compose.yml  neo4j_client.py  schema.py
guinea_pigs/: README.md
gvm_scan/: Dockerfile  __init__.py  docker-compose.yml  gvm_scanner.py  main.py
iac_scan/: Dockerfile  git_source.py  main.py  project_settings.py  requirements.txt  runner.py
knowledge_base/: Makefile  document_store.py  kb_config.yaml
llm_audit/: README.md  __init__.py  __main__.py  scanner.py
mcp/: docker-compose.yml  requirements.txt
mobile_audit/: README.md  __init__.py  __main__.py  scanner.py
mobile_scan/: Dockerfile  analyzer.py  main.py  project_settings.py  requirements.txt  rules.py
os_audit/: README.md  __init__.py  host_agent.py  host_config.py  native_code.py  runner.py
plugins/: README.md
postgres_db/: docker-compose.yml
readmes/: AI_GAUNTLET_TECH_DOC.md  AI_SURFACE_RECON_MODULE.md  ARCHITECTURE.md  GRAPH.SCHEMA.md  README.AGENTIC_SYSTEM.md  README.CYPHERFIX_AGENTS.md  README.DEV.md  README.GRAPH_DB.md  README.GVM.md  README.HTTP_PROBE.md  README.KBASE.md  README.MCP.md  README.MEMORY_GOVERNOR.md  README.MITRE.md  README.PORT_SCAN.md  README.POSTGRES.md  README.RECON.md  README.RECON_ORCHESTRATOR.md  README.RESOURCE_ENUM.md  README.VULN_SCAN.md  README.WCP_RECON_MODULE.md  README.WEBAPP.md  TROUBLESHOOTING.md
recon/: Dockerfile  docker-compose.yml  entrypoint.sh  main.py  project_settings.py  requirements.txt
recon_orchestrator/: api.py  container_manager.py  docker-compose.yml  local_llm_manager.py  mem_calibrate.py  resource_governor.py
repo_scan/: README.md  __init__.py  repo_scanner.py  secret_scanner.py
report_gen/: README.md  __init__.py  knowledge.py  report.py
scanner_suite/: README.md  __init__.py  __main__.py  orchestrator.py  (+1 more)
(+694 files in other folders)
